--- a/notes/20150122.md
+++ b/notes/20150122.md
@@ -40,3 +40,29 @@ Not all diffusive forces are fear?
 ---
 
 While sex is a salve, sex is most sacred when performed from a standpoint of integrity, wholeness, strength, & love.
+
+---
+
+Schooling should start with philosophy & methodology. The student should explicitly create one's own philosophy & methodology.
+
+---
+
+Integrity allows abstractions to be predictable & reliable, with less information required.
+
+Integrity is relative to the Entity & adhered Abstraction.
+
+---
+
+I use both Systems Thinking & Reductionism.
+
+Reductionism is zooming inward. Systems Thinking is seeing the cohesive system. Holism is zooming outward.
+
+Inappropriate Reductionism ignores a Perspective's ignorance.
+
+---
+
+Instead of dreaming of AI as creating & augmenting intelligence, some dream of AI replacing us. Why?
+
+---
+
+I have faith that I will always create novelty. I don't need to retain control by hiding myself. I am free to have transparent expression, to live in my power.
