Added karma. Added notes.

--- a/notes/20150128.md
+++ b/notes/20150128.md
@@ -31,3 +31,7 @@ I've always wanted to be in tune with Psychedelics. It took me a long time to ga
 ---
 
 Conviction is Energetic focus. Anxiety is the feeling of unfocus with care, or a probabilistic-like paradox that begs to be looked into.
+
+---
+
+Is there an easy way to scope systems?
